--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "@monorepo-starter/next-app",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
-    "@monorepo-starter/button": "^1.0.0",
-    "@preconstruct/next": "^1.0.1",
-    "apollo-boost": "^0.4.7",
-    "graphql": "^14.6.0",
-    "isomorphic-unfetch": "^3.0.0",
-    "next": "^9.3.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
-  }
+	"name": "@monorepo-starter/next-app",
+	"version": "1.0.0",
+	"scripts": {
+		"dev": "next",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@material-ui/core": "^4.11.3",
+		"@material-ui/icons": "^4.11.2",
+		"@monorepo-starter/a": "1.0.0",
+		"@monorepo-starter/button": "1.0.0",
+		"@monorepo-starter/filter": "1.0.0",
+		"@monorepo-starter/layout": "^1.0.0",
+		"@monorepo-starter/richtypography": "1.0.0",
+		"@monorepo-starter/section": "1.0.0",
+		"@preconstruct/next": "^1.0.1",
+		"clsx": "^1.1.1",
+		"next": "^9.3.2",
+		"next-images": "^1.7.0",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0"
+	}
 }
