--- a/package.json
+++ b/package.json
@@ -25,18 +25,23 @@
   },
   "dependencies": {
     "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-export-default-from": "^7.12.1",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "@changesets/cli": "^2.5.0",
     "@manypkg/cli": "^0.10.0",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@preconstruct/cli": "^1.1.4",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^25.1.0",
+    "clsx": "^1.1.1",
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.1.0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "prop-types": "^15.7.2"
   },
   "preconstruct": {
     "packages": [
